-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.3, 6.5.0 Beta3
-
None
-
-
a516a368c (dev), 51bc15ffd (6.5)
In my project i install these optional libraries : Qt5Compatibility, Qt3D, Qt Network Auth, Qt Websockets, Qt Serial Port. When building with Qt 6.4.2 i get no problem, but moving to 6.4.3 i get "missing Qt6Bluetooth.dll" when building.
Adding Qt Connectivity manually seems to solve it but the installer should have installed it if one of the mentionned libraries needed it
| For Gerrit Dashboard: QTBUG-111984 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 467971,8 | Windeployqt: change qtModule return value to prevent invalid modules | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 471132,4 | Windeployqt: change qtModule return value to prevent invalid modules | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |